--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
+    "bcrypt": "^5.1.1",
+    "mongo": "^0.1.0",
+    "mongodb": "^6.2.0",
+    "mongoose": "^8.0.0",
     "next": "14.0.1",
+    "next-auth": "^4.24.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
